# ks-scmc

./: .gitignore  INSTALLING.md  Makefile  README.en.md  README.md  go.mod  go.sum  ks-scmc.spec  ksc-mcube.spec
backend/: Makefile  README.md  go.mod  go.sum
backend/cmd/: main.go
backend/common/: config.go  log.go  middleware.go  tls.go
backend/model/: connection.go  container_backup.go  container_configs.go  docker_client.go  images.go  logs.go  network.go  nodes.go  opensnitch.go  paginator.go  registry.go  roles.go  template.go  template_test.go  (+2 more)
client/: CMakeLists.txt  Makefile
client/config/: CMakeLists.txt  ksc-mcube.desktop.in
client/data/: resources.qrc
client/data/images/: CMakeLists.txt
client/data/style/: theme.qss
client/src/: CMakeLists.txt  main-window.cpp  main-window.h  main-window.ui  main.cpp
client/src/common/: button-delegate.cpp  common-page.cpp  common-page.h  common-page.ui  configgroup.cpp  configgroup.h  configmodel.cpp  configtable.cpp  configview.cpp  def.h  guide-item.cpp  guide-item.ui  header-view.cpp  header-view.h  info-worker.cpp  info-worker.h  message-dialog.cpp  message-dialog.h  message-dialog.ui
client/src/pages/container/: container-list.cpp  container-list.h  container-setting.cpp  container-setting.h  container-setting.ui
client/src/pages/container/advanced-configuration/: envs-conf-page.cpp  envs-conf-page.h  graphic-conf-page.cpp  graphic-conf-page.h  high-availability-page.cpp  high-availability-page.h  volumes-conf-page.cpp  volumes-conf-page.h
client/src/pages/container/base-configuration/: cpu-conf-page.cpp  cpu-conf-page.h  memory-conf-page.cpp  memory-conf-page.h  memory-conf-page.ui  network-conf-page.cpp  network-conf-page.h  network-conf-page.ui
client/src/pages/node/: node-addition.cpp  node-addition.ui  node-list.cpp  node-list.h
client/translations/: KsC-mCube.zh_CN.ts  ks-scmc.zh_CN.ts  ksc-mcube.zh_CN.ts
common/: config.go  log.go
model/: authz.go  backup_store.go  container_backup.go  images.go  kernel_msg.go  logs.go  nodes.go  opensnitch.go  paginator.go  registry.go  roles.go  template.go  users.go  utils.go
rpc/: Makefile  errors.go
rpc_proto/: .clang-format  Makefile  common.proto  container.proto  container_service.proto  container_types.proto  image.proto  image_service.proto  image_types.proto  network_service.proto  network_types.proto  node_service.proto  node_types.proto  user.proto  user_service.proto  user_types.proto
scripts/: database.sql  golang_dev_setup.sh
server/: auth_interceptor.go  log_interceptor.go  runtime_logger.go
(+161 files in other folders)
